--- a/ds/package.json
+++ b/ds/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "deepstream.io": "latest",
+    "deepstream.io": "git://github.com/foxxintheboxx/deepstream.io#mod-rpc",
+    "underscore": "latest",
     "deepstream.io-storage-mongodb": "^1.0.2"
   }
 }
